lab4 q7